--- a/components/mq/base/metrics/podmonitor.yaml
+++ b/components/mq/base/metrics/podmonitor.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: mq-metrics-podmonitor
+  name: qm1-metrics-podmonitor
   namespace: cp4i
 spec:
   podMetricsEndpoints:
@@ -10,4 +10,18 @@ spec:
       port: web
   selector:
     matchLabels:
-      app: mq-metric-exporter
+      app: qm1-mq-metric-exporter
+---
+apiVersion: monitoring.coreos.com/v1
+kind: PodMonitor
+metadata:
+  name: qm2-metrics-podmonitor
+  namespace: cp4i
+spec:
+  podMetricsEndpoints:
+    - interval: 10s
+      scheme: http
+      port: web
+  selector:
+    matchLabels:
+      app: qm2-mq-metric-exporter
