--- a/argocd/operators/operators.yaml
+++ b/argocd/operators/operators.yaml
@@ -14,6 +14,8 @@ spec:
             namespace: cert-utils-operator
           - name: openshift-telemetry
             namespace: openshift-telemetry-operator
+          - name: license-service
+            namespace: ibm-licensing
           #- name: openshift-cluster-observability
           #  namespace: openshift-cluster-observability-operator
   template:
