--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -21,6 +21,9 @@ spec:
           - name: license-service
             namespace: ibm-licensing
             sync-wave: "200"
+          - name: license-service-reporter
+            namespace: ibm-ls-reporter
+            sync-wave: "201"
           #- name: openshift-cluster-observability
           #  namespace: openshift-cluster-observability-operator
           #  sync-wave: "300"
