--- a/envs/odf/frankfurt/license-service/sender-patch.yaml
+++ b/envs/odf/frankfurt/license-service/sender-patch.yaml
@@ -1,3 +1,7 @@
+apiVersion: operator.ibm.com/v1alpha1
+kind: IBMLicensing
+metadata:
+  name: instance
 spec:
   sender:
     reporterURL: https://ibm-license-service-reporter-ibm-ls-reporter.apps.67ed0a2171917a5408c1aee8.ocp.techzone.ibm.com
