add api group to role

--- a/argocd/common/cp4i-argo-role.yaml
+++ b/argocd/common/cp4i-argo-role.yaml
@@ -6,6 +6,7 @@ rules:
   - verbs:
       - '*'
     apiGroups:
+      - ibm.com
       - apiconnect.ibm.com
       - eventstreams.ibm.com
       - integration.ibm.com
