--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -12,18 +12,18 @@ spec:
           - name: reloader
             namespace: cp4i
             sync-wave: "200"
-          - name: openshift-monitoring
-            namespace: openshift-monitoring
-            sync-wave: "300"
-          - name: openshift-telemetry
-            namespace: openshift-opentelemetry-operator
-            sync-wave: "300"
-          - name: license-service
-            namespace: ibm-licensing
-            sync-wave: "200"
-          - name: license-service-reporter
-            namespace: ibm-ls-reporter
-            sync-wave: "201"
+          # - name: openshift-monitoring
+          #   namespace: openshift-monitoring
+          #   sync-wave: "300"
+          # - name: openshift-telemetry
+          #   namespace: openshift-opentelemetry-operator
+          #   sync-wave: "300"
+          # - name: license-service
+          #   namespace: ibm-licensing
+          #   sync-wave: "200"
+          # - name: license-service-reporter
+          #   namespace: ibm-ls-reporter
+          #   sync-wave: "201"
           #- name: openshift-cluster-observability
           #  namespace: openshift-cluster-observability-operator
           #  sync-wave: "300"
