--- a/components/mq/variants/region/madrid/consolenotification.yaml
+++ b/components/mq/variants/region/madrid/consolenotification.yaml
@@ -1,7 +1,7 @@
 apiVersion: console.openshift.io/v1
 kind: ConsoleNotification
 metadata:
-  name: us-west
+  name: madrid
 spec:
   text: This is the cluster in Madrid.
   location: BannerTop 
