--- a/envs/odf/frankfurt/mq/external-tls-qm1-patch.yaml
+++ b/envs/odf/frankfurt/mq/external-tls-qm1-patch.yaml
@@ -1,3 +1,3 @@
 - op: add
   path: /spec/dnsNames
-  value: ['qm1-ibm-mq-qm-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com',qm1-ibm-mq-web-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com]
+  value: ['qm1-ibm-mq-qm-cp4i.apps.itz-099syh.infra01-lb.lon04.techzone.ibm.com',qm1-ibm-mq-web-cp4i.apps.itz-099syh.infra01-lb.lon04.techzone.ibm.com]
