--- a/envs/odf/madrid/mq/kustomization.yaml
+++ b/envs/odf/madrid/mq/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 components:
 - ../../../../components/mq/variants/cloudprovider/odf
 - ../../../../components/mq/variants/nonprod
-- ../../../../components/mq/variants/region/madrid
-- ../../../../components/mq/variants/crr/live
+#- ../../../../components/mq/variants/region/madrid
+#- ../../../../components/mq/variants/crr/live
 
 resources:
 - ../../../../components/mq/base
