add reference to mq web user channel

--- a/components/mq/base/singleinstance-qm/mq-server-certificate.yaml
+++ b/components/mq/base/singleinstance-qm/mq-server-certificate.yaml
@@ -24,6 +24,7 @@ spec:
     - client auth
   dnsNames:
     - singleinstance-qm-ibm-mq-qm.apps.itz-jsmlpv.infra01-lb.lon04.techzone.ibm.com
+    - singleinstance-qm-ibm-mq-web.apps.itz-jsmlpv.infra01-lb.lon04.techzone.ibm.com  
 
   issuerRef:
     name: letsencrypt-cluster-issuer
