add reference to mq web user channel

--- a/components/mq/base/singleinstance-qm/qm.yaml
+++ b/components/mq/base/singleinstance-qm/qm.yaml
@@ -58,3 +58,11 @@ spec:
             - tls.crt
   web:
     enabled: true
+   console:
+      authentication:
+        provider: manual
+      authorization:
+        provider: manual
+    manualConfig:
+      secret:
+        name: mqwebuser-secret
