--- a/envs/odf/frankfurt/mq/kustomization.yaml
+++ b/envs/odf/frankfurt/mq/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 components:
 - ../../../../components/mq/variants/cloudprovider/odf
 - ../../../../components/mq/variants/nonprod
-#- ../../../../components/mq/variants/region/frankfurt
-#- ../../../../components/mq/variants/crr/recovery
+- ../../../../components/mq/variants/region/frankfurt
+- ../../../../components/mq/variants/crr/recovery
 
 resources:
 - ../../../../components/mq/base
