--- a/components/mq/variants/region/frankfurt/kustomization.yaml
+++ b/components/mq/variants/region/frankfurt/kustomization.yaml
@@ -7,4 +7,9 @@ resources:
 patches:
   - target:
       kind: QueueManager
+      name: qm1
+    path: native-ha-group.yaml
+  - target:
+      kind: QueueManager
+      name: qm2
     path: native-ha-group.yaml
