--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -29,3 +29,15 @@ spec:
       syncPolicy:
         automated:
           selfHeal: true
+        syncOptions:
+          - ServerSideApply=true
+          - RespectIgnoreDifferences=true
+       ignoreDifferences:
+        - group: instana.io
+          kind: InstanaAgent
+          jsonPointers:
+            - /spec/agent/key
+            - /spec/agent/endpointHost
+            - /spec/agent/endpointPort
+            - /spec/cluster/name
+            - /spec/zone/name
