remove QM2 from instana metrics

--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -16,5 +16,5 @@ spec:
             channel: 'METRICS' 
           QM1:
             channel: 'METRICS'
-          QM2:
-            channel: 'METRICS'
+#          QM2:
+#            channel: 'METRICS'
