add QM3 to instana metrics

--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -16,5 +16,7 @@ spec:
             channel: 'METRICS' 
           QM1:
             channel: 'METRICS'
-#          QM2:
-#            channel: 'METRICS'
+          QM2:
+            channel: 'METRICS'
+          QM3:
+            channel: 'METRICS'
