--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -116,3 +116,5 @@ spec:
             channel: 'METRICS'
           NEWQM10:
             channel: 'METRICS'
+          PM22:
+            channel: 'METRICS'
