add queues to qm

--- a/components/mq/base/metrics/kustomization.yaml
+++ b/components/mq/base/metrics/kustomization.yaml
@@ -9,6 +9,4 @@ resources:
   - empty-metrics-credentials.yaml
   - deployment.yaml
   - podmonitor.yaml
-  #- buildconfig-otel.yaml
-  #- deployment-otel.yaml
-  #- mq-otel.yaml
+  #- otel
