--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -6,14 +6,16 @@ metadata:
     argocd.argoproj.io/sync-options: ServerSideApply=true
 spec:
   pod:
-    hostAliases:
-    - ip: "161.156.209.138"
-      hostnames:
-        - "itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-        - "demo-instana.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-        - "agent-acceptor.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-        - "otlp-http.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-        - "otlp-grpc.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    labels: 
+      app: instana-agent
+    # hostAliases:
+    # - ip: "161.156.209.138"
+    #   hostnames:
+    #     - "itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    #     - "demo-instana.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    #     - "agent-acceptor.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    #     - "otlp-http.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    #     - "otlp-grpc.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
   agent:
     configuration_yaml: |
       # Secrets
