remove serversideapply and refer to instana keyssecret

--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -2,24 +2,9 @@ apiVersion: instana.io/v1
 kind: InstanaAgent
 metadata:
   name: instana-agent
-  annotations:
-    argocd.argoproj.io/sync-options: ServerSideApply=true
 spec:
   agent:
-    pod:
-      labels:
-        app.kubernetes.io/name: instana-agent
-        app.kubernetes.io/instance: instana-agent
-        app.kubernetes.io/version: "237-0"
-        app.kubernetes.io/component: instana-agent
-      # hostAliases:
-      # - ip: "161.156.209.138"
-      #   hostnames:
-      #     - "itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-      #     - "demo-instana.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-      #     - "agent-acceptor.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-      #     - "otlp-http.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
-      #     - "otlp-grpc.itzvsi-t3ul3389.dte.demo.ibmcloud.com"
+    keysSecret: instana-agent-keys
     configuration_yaml: |
       # Secrets
       com.instana.secrets:
