configure instana agent

--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -7,6 +7,10 @@ spec:
     endpointHost: ingress-orange-saas.instana.io
     endpointPort: '443'
     keysSecret: instana-agent-keys
+    cluster:
+      name: seb-jan-2026
+    zone:
+      name: madrid 
     configuration_yaml: |
       # Secrets
       com.instana.secrets:
