add additional backend

--- a/components/instana-agent/base/instana-agent.yaml
+++ b/components/instana-agent/base/instana-agent.yaml
@@ -11,6 +11,10 @@ spec:
     endpointHost: ingress-orange-saas.instana.io
     endpointPort: '443'
     keysSecret: instana-agent-keys
+    additionalBackends:
+      - endpointHost: itzvsi-t3ul3389.dte.demo.ibmcloud.com
+        endpointPort: '443'
+        keysSecret: instana-agent-keys-dedicated
    
     configuration_yaml: |
       # Secrets
