--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -32,3 +32,6 @@ spec:
       syncPolicy:
         automated:
           selfHeal: true
+        syncOptions:
+          - ServerSideApply=true
+          - RespectIgnoreDifferences=true
