--- a/components/instana-agent/base/kustomization.yaml
+++ b/components/instana-agent/base/kustomization.yaml
@@ -4,3 +4,9 @@ kind: Kustomization
 resources:
   - instana-agent.yaml
   - daemonset.yaml
+
+configMapGenerator:
+  - name: instana-additional-backend-ca
+    files:
+    - ss-backend-cert.pem
+    type: Opaque
