--- a/components/instana-agent/base/kustomization.yaml
+++ b/components/instana-agent/base/kustomization.yaml
@@ -9,3 +9,5 @@ configMapGenerator:
   - name: instana-additional-backend-ca
     files:
     - ss-backend-cert.pem
+generatorOptions:
+  disableNameSuffixHash: true
