--- a/components/instana-agent/base/kustomization.yaml
+++ b/components/instana-agent/base/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
 configMapGenerator:
   - name: instana-backend-ca
     files:
-    - ss-backend-cert.pem
+    - ca.crt=ss-backend-cert.pem
 generatorOptions:
   disableNameSuffixHash: true
