--- a/components/instana-agent/base/kustomization.yaml
+++ b/components/instana-agent/base/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - daemonset.yaml
 
 configMapGenerator:
-  - name: instana-backend-ca
+  - name: instana-additional-backend-ca
     files:
     - ca.crt=ss-backend-cert.pem
 generatorOptions:
