remove streaming queue

--- a/components/mq/base/singleinstance-qm/kustomization.yaml
+++ b/components/mq/base/singleinstance-qm/kustomization.yaml
@@ -7,7 +7,7 @@ configMapGenerator:
   - name: singleinstance-qm-configmap
     files:
       - qm-config/tls.mqsc
-      - qm-config/monitoring.mqsc
+      #- qm-config/monitoring.mqsc
       - qm-config/mq.ini
 
 generatorOptions:
